// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complex Example 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-Complex Example23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="Complex Example23456"
    >
      <div
        class="lf-row"
        id="Complex Example-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-header23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="header23456"
          >
            <div
              class="lf-row"
              id="header-content23456"
              style="flex-wrap: wrap;"
            >
              <div
                class=""
                id="bl-heading23456"
                style="flex: 1 0 auto;"
              >
                <div
                  id="heading23456"
                >
                  # Issues

                </div>
              </div>
              <div
                class=""
                id="bl-feedback23456"
                style="flex: 0 1 auto;"
              >
                <div
                  id="feedback23456"
                >
                  Give Feedback

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tools23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="tools23456"
          >
            <div
              class="lf-row"
              id="tools-content23456"
              style="flex-wrap: wrap;"
            >
              <div
                class=""
                id="bl-search23456"
                style="flex: 0 0 auto;"
              >
                <input
                  id="search23456"
                />
              </div>
              <div
                class=""
                id="bl-Assign23456"
                style="flex: 0 0 auto;"
              >
                <button
                  id="Assign23456"
                >
                  Assign23456
                </button>
              </div>
              <div
                class=""
                id="bl-Reporter23456"
                style="flex: 0 0 auto;"
              >
                <button
                  id="Reporter23456"
                >
                  Reporter23456
                </button>
              </div>
              <div
                class=""
                id="bl-Status23456"
                style="flex: 0 0 auto;"
              >
                <button
                  id="Status23456"
                >
                  Status23456
                </button>
              </div>
              <div
                class=""
                id="bl-Type23456"
                style="flex: 1 0 auto;"
              >
                <button
                  id="Type23456"
                >
                  Type23456
                </button>
              </div>
              <div
                class=""
                id="bl-advanced23456"
                style="flex: 0 0 auto;"
              >
                <div
                  id="advanced23456"
                >
                  Advanced Search

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-main23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="main23456"
          >
            <div
              class="lf-row"
              id="main-content23456"
              style="flex-wrap: wrap;"
            >
              <div
                class=""
                id="bl-list_main23456"
                style="flex: 0 1 300px;"
              >
                <div
                  id="list_main23456"
                >
                  <div
                    class="lf-row"
                    id="list_main-content23456"
                    style="flex-wrap: wrap;"
                  >
                    <div
                      class="lf-col"
                      id="bl-list_tools23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="list_tools23456"
                      >
                        <div
                          class="lf-row"
                          id="list_tools-content23456"
                          style="flex-wrap: wrap;"
                        >
                          <div
                            class=""
                            id="bl-Created23456"
                            style="flex: 1 1 auto;"
                          >
                            <button
                              id="Created23456"
                            >
                              Created23456
                            </button>
                          </div>
                          <div
                            class=""
                            id="bl-Fil23456"
                            style="flex: 0 1 auto;"
                          >
                            <button
                              id="Fil23456"
                            >
                              Fil23456
                            </button>
                          </div>
                          <div
                            class=""
                            id="bl-Ref23456"
                            style="flex: 0 1 auto;"
                          >
                            <button
                              id="Ref23456"
                            >
                              Ref23456
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-list23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="list23456"
                      >
                        <div
                          class="lf-row"
                          id="list-content23456"
                          style="flex-wrap: wrap;"
                        >
                          <div
                            class="lf-col"
                            id="bl-item_0_123456"
                            style="--lf-span: 24; --lf-span-md: 24; height: 50px;"
                          >
                            <div
                              id="item_0_123456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              item_0_123456
                            </div>
                          </div>
                          <div
                            class="lf-col"
                            id="bl-item_0_223456"
                            style="--lf-span: 24; --lf-span-md: 24; height: 50px;"
                          >
                            <div
                              id="item_0_223456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              item_0_223456
                            </div>
                          </div>
                          <div
                            class="lf-col"
                            id="bl-item_0_323456"
                            style="--lf-span: 24; --lf-span-md: 24; height: 50px;"
                          >
                            <div
                              id="item_0_323456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              item_0_323456
                            </div>
                          </div>
                          <div
                            class="lf-col"
                            id="bl-item_0_423456"
                            style="--lf-span: 24; --lf-span-md: 24; height: 50px;"
                          >
                            <div
                              id="item_0_423456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              item_0_423456
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class=""
                id="bl-main_content23456"
                style="flex: 1 1 200px;"
              >
                <div
                  id="main_content23456"
                >
                  <div
                    class="lf-row"
                    id="main_content-content23456"
                    style="flex-wrap: wrap;"
                  >
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        ## Validate still a heading

The below config will fail for both the field on root and the field in the object when the context is validated.

                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-comment23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="comment23456"
                      >
                        <div
                          class="lf-row"
                          id="comment-content23456"
                          style="flex-wrap: wrap;"
                        >
                          <div
                            class=""
                            id="bl-avatar23456"
                            style="flex: 0 1 80px;"
                          >
                            <div
                              id="avatar23456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              avatar23456
                            </div>
                          </div>
                          <div
                            class=""
                            id="bl-input_comment23456"
                            style="flex: 1 1 80px;"
                          >
                            <input
                              id="input_comment23456"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class=""
                id="bl-sider23456"
                style="flex: 0 1 200px;"
              >
                <div
                  id="sider23456"
                >
                  <div
                    class="lf-row"
                    id="sider-content23456"
                    style="flex-wrap: wrap;"
                  >
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        ### One

                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        Two

                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        ### three

                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        Four

                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Complex No Flex Field Example 1`] = `
<div>
  <div
    class="lf-col"
    id="bl-Complex No Flex Field Example23456"
    style="--lf-span: 24; --lf-span-md: 24;"
  >
    <div
      id="Complex No Flex Field Example23456"
    >
      <div
        class="lf-row"
        id="Complex No Flex Field Example-content23456"
        style="flex-wrap: wrap;"
      >
        <div
          class="lf-col"
          id="bl-header23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="header23456"
          >
            <div
              class="lf-row"
              id="header-content23456"
              style="flex-wrap: wrap;"
            >
              <div
                class=""
                id="bl-heading23456"
                style="flex: 1 1 auto;"
              >
                <div
                  id="heading23456"
                >
                  # Issues

                </div>
              </div>
              <div
                class=""
                id="bl-feedback23456"
                style="flex: 0 1 auto;"
              >
                <div
                  id="feedback23456"
                >
                  Give Feedback

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-tools23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="tools23456"
          >
            <div
              class="lf-row"
              id="tools-content23456"
              style="flex-wrap: wrap;"
            >
              <div
                class=""
                id="bl-search23456"
                style="flex: 0 1 auto;"
              >
                <input
                  id="search23456"
                />
              </div>
              <div
                class=""
                id="bl-Assign23456"
                style="flex: 0 1 auto;"
              >
                <button
                  id="Assign23456"
                >
                  Assign23456
                </button>
              </div>
              <div
                class=""
                id="bl-Reporter23456"
                style="flex: 0 1 auto;"
              >
                <button
                  id="Reporter23456"
                >
                  Reporter23456
                </button>
              </div>
              <div
                class=""
                id="bl-Status23456"
                style="flex: 0 1 auto;"
              >
                <button
                  id="Status23456"
                >
                  Status23456
                </button>
              </div>
              <div
                class=""
                id="bl-Type23456"
                style="flex: 1 1 auto;"
              >
                <button
                  id="Type23456"
                >
                  Type23456
                </button>
              </div>
              <div
                class=""
                id="bl-advanced23456"
                style="flex: 0 1 auto;"
              >
                <div
                  id="advanced23456"
                >
                  Advanced Search

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="lf-col"
          id="bl-main23456"
          style="--lf-span: 24; --lf-span-md: 24;"
        >
          <div
            id="main23456"
          >
            <div
              class="lf-row"
              id="main-content23456"
              style="flex-wrap: wrap;"
            >
              <div
                class=""
                id="bl-list_main23456"
                style="flex: 0 1 300px;"
              >
                <div
                  id="list_main23456"
                >
                  <div
                    class="lf-row"
                    id="list_main-content23456"
                    style="flex-wrap: wrap;"
                  >
                    <div
                      class="lf-col"
                      id="bl-list_tools23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="list_tools23456"
                      >
                        <div
                          class="lf-row"
                          id="list_tools-content23456"
                          style="flex-wrap: wrap;"
                        >
                          <div
                            class=""
                            id="bl-Created23456"
                            style="flex: 1 1 auto;"
                          >
                            <button
                              id="Created23456"
                            >
                              Created23456
                            </button>
                          </div>
                          <div
                            class=""
                            id="bl-Fil23456"
                            style="flex: 0 1 auto;"
                          >
                            <button
                              id="Fil23456"
                            >
                              Fil23456
                            </button>
                          </div>
                          <div
                            class=""
                            id="bl-Ref23456"
                            style="flex: 0 1 auto;"
                          >
                            <button
                              id="Ref23456"
                            >
                              Ref23456
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-list23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="list23456"
                      >
                        <div
                          class="lf-row"
                          id="list-content23456"
                          style="flex-wrap: wrap;"
                        >
                          <div
                            class="lf-col"
                            id="bl-item_0_123456"
                            style="--lf-span: 24; --lf-span-md: 24; height: 50px;"
                          >
                            <div
                              id="item_0_123456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              item_0_123456
                            </div>
                          </div>
                          <div
                            class="lf-col"
                            id="bl-item_0_223456"
                            style="--lf-span: 24; --lf-span-md: 24; height: 50px;"
                          >
                            <div
                              id="item_0_223456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              item_0_223456
                            </div>
                          </div>
                          <div
                            class="lf-col"
                            id="bl-item_0_323456"
                            style="--lf-span: 24; --lf-span-md: 24; height: 50px;"
                          >
                            <div
                              id="item_0_323456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              item_0_323456
                            </div>
                          </div>
                          <div
                            class="lf-col"
                            id="bl-item_0_423456"
                            style="--lf-span: 24; --lf-span-md: 24; height: 50px;"
                          >
                            <div
                              id="item_0_423456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              item_0_423456
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class=""
                id="bl-main_content23456"
                style="flex: 1 1 200px;"
              >
                <div
                  id="main_content23456"
                >
                  <div
                    class="lf-row"
                    id="main_content-content23456"
                    style="flex-wrap: wrap;"
                  >
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        ## Validate still a heading

The below config will fail for both the field on root and the field in the object when the context is validated.

                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-comment23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="comment23456"
                      >
                        <div
                          class="lf-row"
                          id="comment-content23456"
                          style="flex-wrap: wrap;"
                        >
                          <div
                            class=""
                            id="bl-avatar23456"
                            style="flex: 0 1 auto;"
                          >
                            <div
                              id="avatar23456"
                              style="background: rgb(34, 102, 153); border: 2px solid #00aaee; text-align: center; font-size: 12px; color: rgb(255, 255, 255);"
                            >
                              avatar23456
                            </div>
                          </div>
                          <div
                            class=""
                            id="bl-inputs_comment23456"
                            style="flex: 1 1 auto;"
                          >
                            <input
                              id="inputs_comment23456"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class=""
                id="bl-sider23456"
                style="flex: 0 1 200px;"
              >
                <div
                  id="sider23456"
                >
                  <div
                    class="lf-row"
                    id="sider-content23456"
                    style="flex-wrap: wrap;"
                  >
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        ### One

                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        Two

                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        ### three

                      </div>
                    </div>
                    <div
                      class="lf-col"
                      id="bl-content23456"
                      style="--lf-span: 24; --lf-span-md: 24;"
                    >
                      <div
                        id="content23456"
                      >
                        Four

                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
